# simple-zk

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: main.rs
pallets/test-zk/: Cargo.toml
pallets/test-zk/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: pallet_simple_zk.rs
