[package]
name = "simple-zk-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
pallet-test-zk = { path = "../pallets/test-zk", default-features = false }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "pallet-test-zk/std",
    "sp-runtime/std",
    "sp-core/std"
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "pallet-test-zk/runtime-benchmarks"
]