[package]
name = "pallet-test-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std", 
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std"
]
runtime-benchmarks = ["frame-support/runtime-benchmarks"]